{
    "name": "InputActions",
    "maps": [
        {
            "name": "Player",
            "id": "88264fde-c6ce-4a4e-9695-e1502fd918c7",
            "actions": [
                {
                    "name": "MouseMove",
                    "type": "Value",
                    "id": "d6036e0a-8437-479a-901d-7ac7993e6309",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseClick",
                    "type": "Button",
                    "id": "3d37b3cb-9098-486c-9c0c-954591e16ab7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseSecondaryClick",
                    "type": "Button",
                    "id": "4dea72d7-8845-4438-892d-7867bb6bb57f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "21e02b84-d1de-412a-9ea0-aeef31d4c26c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "bad422f9-8e0b-4811-a8b3-b76c873c9184",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0ab5caf3-bf11-4b6d-bed9-a73556d984ab",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8433d737-133c-45fc-9bd0-e8acc23cce7e",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseSecondaryClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b49a2d04-534c-47b5-9b6f-ceec038aeb03",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}